# ball-trajectory-sim

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: simulation_file_description.txt  space_objects_data.csv
include/: Displaying.h  FilesManager.h  Simulation.h  SpaceObject.h  TrajectoryCalculator.h
src/: FilesManager.cpp  TrajectoryCalculator.cpp  main.cpp
